kubernetes/example/cache-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cache
spec:
  host: cache-grpc
  subsets:
  - name: v1
    labels:
      version: v1.0.1
  - name: v2
    labels:
      version: v1.0.2
