kubernetes/example/cache-internal-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cache-internal-virtual-service
spec:
  hosts:
  - "cache-grpc-v1"
  http:
    - route:
      - destination:
          port:
            number: 80
          host: cache-grpc
          subset: v1

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cache-internal-virtual-service-v2
spec:
  hosts:
  - "cache-grpc-v2"
  http:
    - route:
      - destination:
          port:
            number: 80
          host: cache-grpc
          subset: v2

---

apiVersion: v1
kind: Service
metadata:
  name: cache-grpc-v1
spec:
  ports:
  - port: 80
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: cache-grpc-v2
spec:
  ports:
  - port: 80
    protocol: TCP
