kubernetes/example/gateway-virtual-service-2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-gateway-virtual-service-2
spec:
  hosts:
  - "*.test.example.com"
  gateways:
  - test-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: test
        subset: v3
